# swindon

./: .buildinfo  .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  Cargo.toml.orig  LICENSE-MIT  README.md  README.rst  appveyor.yml  bulk.yaml  changelog.html  example-peer-A.yaml  example-peer-B.yaml  example.yaml  genindex.html  http-routingtable.html  index.html  installation.html  objects.inv  search.html  searchindex.js  vagga.yaml
.travis/: coverage.sh  publish-docs.sh
_sources/: index.rst.txt
_sources/config/: http-destinations.rst.txt  replication.rst.txt  routing.rst.txt  session-pools.rst.txt
_sources/internals/: index.rst.txt  load_balancing.rst.txt
_sources/rust_api/swindon/: index.rst.txt
_sources/swindon-lattice/: index.rst.txt  upstream.rst.txt  websocket_shutdown_codes.rst.txt
config/: auth.html  handlers.html  http-destinations.html  index.html  ldap.html  main.html  mixins.html  replication.html  routing.html  session-pools.html
docs/: Makefile  changelog.rst  conf.py  index.rst  installation.rst  requirements.txt  swindondomain.py
docs/config/: auth.rst  handlers.rst  http-destinations.rst  index.rst  ldap.rst  main.rst  mixins.rst  replication.rst  routing.rst  session-pools.rst  tls.rst
docs/example/: .gitignore  swindon.yaml  vagga.yaml
docs/internals/: index.rst  load_balancing.rst  request_id.rst
docs/simulations/: defaultConfig.js  index.html
docs/simulations/lib/: HeatMap.js  LatencyPlot.js  Main.js  Request.js  Server.js  SlidingMedian.js  Stats.js  WindowHistogram.js
docs/swindon-lattice/: backend.rst  crdt.rst  examples.rst  frontend.rst  index.rst  lattices.rst  upstream.rst  websocket_shutdown_codes.rst
docs/tangle/: backend.rst  crdt.rst  frontend.rst  index.rst  lattices.rst  websocket_shutdown_codes.rst
examples/linger/: connect.py  swindon.yaml
examples/message-board/: README.rst  requirements.txt  swindon.yaml
examples/message-board/messageboard/: convention.py  main.py  swindon.py
examples/message-board/public/: index.html
examples/message-board2/: README.rst  messageboard.js  package.json  swindon.yaml  swindon1.yaml  swindon2.yaml  webpack.config.js
examples/message-board2/public/: index.html
examples/multi-user-chat/: README.rst  package.json  requirements.txt  swindon.yaml
examples/multi-user-chat/muc/: __main__.py  chat.py  main.py  swindon.py
examples/multi-user-chat/src/: index.js  login.js  render.js  routes.js  websocket.js
examples/multi-user-chat2/: README.rst  package.json  requirements.txt  swindon1.yaml  swindon2.yaml
examples/multi-user-chat2/muc/: chat.py  convention.py  main.py
examples/multi-user-chat2/src/: routes.js  server.js
examples/presence/: README.rst  auth.marko  button.marko  index.js  package.json  requirements.txt  user_list.marko  webpack.config.js
internals/: index.html  load_balancing.html  request_id.html
public/: websocket.html
rust_api/swindon/: index.html
src/: default_error_page.html  default_error_page.rs  either.rs  flush_and_wait.rs  handler.rs  http_pools.rs  intern.rs  json_requests.rs  main-dev.rs  main.rs  metrics.rs  privileges.rs  prometheus_metrics.rs  proxy.rs  request_id.rs  response.rs  routing.rs  runtime.rs  serializer.rs  short_circuit.rs  slot.rs  startup.rs  template.rs
src/authorizers/: ldap.rs  mod.rs  source_ip.rs
src/chat/: api.rs  authorize.rs  backend.rs  cid.rs  client.rs  close_reason.rs  connection_sender.rs  content_type.rs  dispatcher.rs  error.rs  handler.rs  inactivity_handler.rs  message.rs  mod.rs  proto.rs  router.rs  tangle_auth.rs  websocket.rs
src/config/: authorization.rs  authorizers.rs  chat.rs  disk.rs  empty_gif.rs  fingerprint.rs  handlers.rs  http.rs  http_destinations.rs  ldap.rs  listen.rs  log.rs  mod.rs  networks.rs  proxy.rs  read.rs  redirect.rs  replication.rs  root.rs  routing.rs  self_status.rs  session_pools.rs  static_files.rs  tls.rs  version.rs  visitors.rs
src/dev/: mod.rs
src/handlers/: empty_gif.rs  files.rs  mod.rs  prometheus_metrics.rs  proxy.rs  redirect.rs  self_status.rs  swindon_chat.rs  websocket.rs  websocket_echo.rs
src/incoming/: authorizer.rs  debug.rs  encoder.rs  handler.rs  input.rs  mod.rs  quick_reply.rs  router.rs
src/logging/: context.rs  http.rs  lib.rs  mod.rs
src/proxy/: backend.rs  frontend.rs  mod.rs  request.rs  response.rs
src/updater/: mod.rs
src/websocket/: base64.rs  dispatcher.rs  echo.rs  handshake.rs  mod.rs  proto.rs  write.rs
swindon-lattice/: backend.html  crdt.html  examples.html  frontend.html  index.html  lattices.html  upstream.html  websocket_shutdown_codes.html
tests/: 403.html  404.html  500.html  README.rst  auth_test.py  base_redirect_test.py  config-w-replication.yaml.tpl  config.yaml.tpl  config_test.py  conftest.py  empty_gif_test.py  ldap_test.py  proxy_test.py  pytest.ini  replication_test.py  requirements.txt  simple_test.py  single_file_test.py  slapd.conf  static_test.py  strip_www_redirect_test.py  swindon_chat_inactivity.py  swindon_chat_test.py  swindon_lattice_inactivity.py  swindon_lattice_test.py  versioned_static_test.py  websocket_echo_test.py
tests/assets/: link.txt  static_file.html  test.html
(+51 files in other folders)
