[package]

name = "swindon"
version = "0.6.2"
authors = ["a.popravka@smartweb.com.ua", "paul@colomiets.name"]
description = """
    An HTTP edge (frontend) server with smart websockets support
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["tokio", "http", "websockets", "server", "web"]
categories = ["asynchronous", "web-programming::http-server"]
homepage = "http://github.com/swindon-rs/swindon"
documentation = "https://swindon-rs.github.io/swindon"

[dependencies]
futures = "0.1.9"
futures-cpupool = "0.1.2"
tokio-core = "0.1.6"
tokio-io = "0.1.0"
quick-error = "1.1.0"
log = "0.3.8"
env_logger = "0.4.3"
quire = { rev="2b630bf", git="https://github.com/tailhook/rust-quire" }
argparse = "0.2.1"
time = "0.1.35"
lazy_static = "0.2.1"
mime = "0.2.2"
mime_guess = "1.8.0"
tk-sendfile = "0.4.0" # to remove
http-file-headers = { rev="6d761c7", git="https://github.com/swindon-rs/http-file-headers" }
tk-bufstream = "0.3.0"
tk-http = "0.3.1"
netbuf = "0.4.0"
byteorder = "1.0.0"
httpbin = "0.3.1"
slab = "0.3.0"
matches = "0.1.4"
assert_matches = "1.0.1"
string-intern = {version="0.1.7", features=["serde"], default-features=false}
rand = "0.3.14"
tk-pool = "0.3.1"
tk-listen = "0.1.0"
abstract-ns = "0.3.4"
ns-std-threaded = "0.2.0"
libc = "0.2.21"
scoped-tls = "0.1.0"
self-meter-http = "0.4.0"
libcantal = "0.3.1"
serde = { version = "1.0.0", features = ["rc"] }
serde_derive = "1.0.8"
serde_json = "1.0.0"
blake2 = "0.6.0"
digest = "0.6.0"
digest-writer = "0.2.0"
generic-array = "0.8.2"
typenum = "1.9.0"
regex = "0.2.2"
trimmer = "0.3.0"

[profile.release]
debug = true

[[bin]]
name = "swindon"
path = "src/main.rs"

[[bin]]
name = "swindon-dev"
path = "src/main-dev.rs"
