[package]

name = "swindon"
version = "0.7.1"
authors = ["a.popravka@smartweb.com.ua", "paul@colomiets.name"]
description = """
    An HTTP edge (frontend) server with smart websockets support
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["tokio", "http", "websockets", "server", "web"]
categories = ["asynchronous", "web-programming::http-server"]
homepage = "http://github.com/swindon-rs/swindon"
documentation = "https://swindon-rs.github.io/swindon"

[dependencies]
futures = "0.1.16"
futures-cpupool = "0.1.6"
tokio-core = "0.1.6"
tokio-io = "0.1.0"
quick-error = "1.2.1"
log = "0.3.8"
env_logger = "0.4.3"
quire = "0.3.0"
argparse = "0.2.1"
time = "0.1.35"
lazy_static = "0.2.1"
mime_guess = "1.8.0"
http-file-headers = "0.1.3"
httpdate = "0.3.0"
tk-bufstream = "0.3.0"
tk-http = { version="0.3.1", default-features=false }
netbuf = "0.4.0"
byteorder = "1.0.0"
httpbin = "0.3.3"
slab = "0.3.0"
matches = "0.1.4"
assert_matches = "1.0.1"
string-intern = {version="0.1.7", features=["serde"], default-features=false}
rand = "0.3.14"
tk-pool = "0.3.1"
tk-listen = "0.1.0"
abstract-ns = "0.3.4"
ns-std-threaded = "0.2.0"
libc = "0.2.31"
scoped-tls = "0.1.0"
self-meter-http = "0.4.1"
libcantal = "0.3.2"
serde = { version = "1.0.15", features = ["rc"] }
serde_derive = "1.0.15"
serde_json = "1.0.3"
blake2 = "0.6.0"
digest = "0.6.0"
digest-writer = "0.2.0"
generic-array = "0.8.3"
typenum = "1.9.0"
regex = "0.2.2"
trimmer = "0.3.2"

[profile.release]
debug = true

[[bin]]
name = "swindon"
path = "src/main.rs"

[[bin]]
name = "swindon-dev"
path = "src/main-dev.rs"
